--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -14,14 +14,16 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.77.0",
     "@tanstack/react-router": "^1.120.10",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "redux-toolkit": "^1.1.2",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
